[package]
name = "probation-csv"
version = "0.1.0"
authors = ["Siamion Makarski <sm@hellofresh.com>"]
edition = "2018"

[dependencies]
csv = "1"
rust_google_oauth2 = { git = "ssh://git@github.com/makarski/rust_google_oauth2.git", version = "0.1"}
reqwest = "0.9.11"
serde = "1"
serde_json = "1.0.38"
serde_derive = "1"
